--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,33 @@
-<h1>hola</h1>
-<app-empleado></app-empleado>
-<app-alumnado></app-alumnado>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Mi Aplicación</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/menu" routerLinkActive="active">Menú</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/empleado" routerLinkActive="active">Empleados</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/alumnado" routerLinkActive="active">Alumnado</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+  <!-- Aquí se renderizan dinámicamente los componentes -->
+  <div class="container mt-4">
+    <router-outlet></router-outlet>
+  </div>
+  
+  <!-- Footer siempre visible -->
+  <app-footer></app-footer>
+  
