--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,39 @@
 <div class="container text-center">
-  <h1>Bienvenido a la página de One Piece</h1>
-  <p>Descubre más sobre los personajes y las aventuras de One Piece.</p>
+  <h1>Bienvenido a la página de Los Simpsons</h1>
+  <p>Descubre más sobre los personajes y las aventuras de la familia Simpson.</p>
 
-  <!-- Carrusel de imágenes de One Piece -->
-  <div id="onePieceCarousel" class="carousel slide" data-bs-ride="carousel">
+  <!-- Carrusel de imágenes de Los Simpsons -->
+  <div id="simpsonsCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/1331108.jpeg" class="d-block w-100" alt="Luffy">
+        <img src="img/homer_simpson.jpg" class="d-block w-100" alt="Homer Simpson">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Luffy, el Capitán</h5>
-          <p>El joven soñador que quiere encontrar el One Piece.</p>
+          <h5>Homer Simpson</h5>
+          <p>El cabeza de familia que siempre está en busca de aventuras... o de cerveza.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/roronoa-zoro-hfxnwuxph7uv5tsu.jpg" class="d-block w-100" alt="Zoro">
+        <img src="img/marge_simpson.jpg" class="d-block w-100" alt="Marge Simpson">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Zoro, el Espadachín</h5>
-          <p>El experto espadachín que busca ser el mejor del mundo.</p>
+          <h5>Marge Simpson</h5>
+          <p>La madre y esposa que siempre mantiene a la familia unida.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/portada_one-piece.jpg" class="d-block w-100" alt="Nami">
+        <img src="img/bart_simpson.jpg" class="d-block w-100" alt="Bart Simpson">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Nami, la Navegante</h5>
-          <p>La navegante con una gran habilidad para la cartografía.</p>
+          <h5>Bart Simpson</h5>
+          <p>El travieso hijo que siempre está metido en problemas.</p>
         </div>
       </div>
     </div>
 
     <!-- Controles del carrusel -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#onePieceCarousel" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#simpsonsCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#onePieceCarousel" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#simpsonsCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
@@ -44,30 +44,30 @@
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <img src="img/mapa.png" class="card-img-top card-img-size" alt="One Piece World">
+          <img src="img/springfield.jpg" class="card-img-top card-img-size" alt="Springfield">
           <div class="card-body">
-            <h5 class="card-title">Mundo de One Piece</h5>
-            <p class="card-text">Un mundo lleno de islas, aventuras y un tesoro legendario: el One Piece.</p>
+            <h5 class="card-title">La Ciudad de Springfield</h5>
+            <p class="card-text">El hogar de los Simpsons y una ciudad llena de personajes interesantes.</p>
             <a href="#" class="btn btn-primary">Explorar más</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="img/almirantes.jpg" class="card-img-top card-img-size" alt="Marines">
+          <img src="img/krusty.png" class="card-img-top card-img-size" alt="Krusty Burger">
           <div class="card-body">
-            <h5 class="card-title">Los Marines</h5>
-            <p class="card-text">El ejército mundial luchando para mantener el orden y la justicia.</p>
+            <h5 class="card-title">Krusty Burger</h5>
+            <p class="card-text">La famosa cadena de comida rápida que está llena de locuras.</p>
             <a href="#" class="btn btn-primary">Ver más</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="img/rev.jpg" class="card-img-top card-img-size" alt="Revolucionarios">
+          <img src="img/comisaria.jpg" class="card-img-top card-img-size" alt="Policía de Springfield">
           <div class="card-body">
-            <h5 class="card-title">Los Revolucionarios</h5>
-            <p class="card-text">Un grupo rebelde que lucha contra el gobierno mundial.</p>
+            <h5 class="card-title">Policía de Springfield</h5>
+            <p class="card-text">El cuerpo de policía dirigido por el incompetente Chief Wiggum.</p>
             <a href="#" class="btn btn-primary">Descubrir más</a>
           </div>
         </div>
