--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -1,14 +1,27 @@
-<strong>Empleado estrella</strong>
-<ul>
-    <li>{{empleado.nombre}} y el Salario es {{empleado.edad}}</li>
-</ul>
+<h2>{{ title }}</h2>
 
+<h3>Lista de empleados:</h3>
 <ul>
-    @if(trabajadorExterno){
-        <li>{{empleadoExt.nombre}}</li>
-    }@else{
-        <li>Lista de trabajadores internos</li>
+  @for (emp of trabajador; track emp.nombre) {
+    <li>
+      {{ emp.nombre }} - {{ emp.edad }} años
+    </li>
+  }
+</ul>
+<h3>Personajes de Los Simpson</h3>
+@if (errorMessage) {
+  <p class="error">{{ errorMessage }}</p>
+} @else {
+  <ul>
+    @for (character of characters; track character._id) {
+      <li>
+        <h4>{{ character.Nombre }}</h4>
+        <img [src]="character.Imagen" alt="{{ character.Nombre }}">
+        <p><strong>Género:</strong> {{ character.Genero }}</p>
+        <p><strong>Estado:</strong> {{ character.Estado }}</p>
+        <p><strong>Ocupación:</strong> {{ character.Ocupacion }}</p>
+        <p><strong>Historia:</strong> {{ character.Historia }}</p>
+      </li>
     }
-</ul>
-
-
+  </ul>
+}
