--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,19 @@
 <nav class="navbar navbar-expand-lg custom-navbar">
   <div class="container">
-    <!-- Logo de Los Simpsons -->
-    <a class="navbar-brand" href="#"><img src="img/logoo.png" alt="Los Simpsons Logo" class="navbar-logo"></a>
+    <!-- Logo -->
+    <a class="navbar-brand" href="#">
+      <img src="img/logoo.png" alt="Los Simpsons Logo" class="navbar-logo">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <!-- Enlaces de navegación -->
         <li class="nav-item">
           <a class="nav-link custom-link" routerLink="/home" routerLinkActive="active">🏠 Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link custom-link" routerLink="/menu" routerLinkActive="active">🍔 Menú</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link custom-link" routerLink="/empleado" routerLinkActive="active">👥 Empleados</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link custom-link" routerLink="/alumnado" routerLinkActive="active">🎓 Alumnos</a>
+          <a class="nav-link custom-link" routerLink="/characters" routerLinkActive="active">💛 Personajes</a>
         </li>
       </ul>
     </div>
