--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
   
 /* Fondo de la página con las nubes de Los Simpsons */
 body {
-  background: url('../public/img/nubes.jpg') no-repeat center top;
+  background: url('../public/img/fondo.gif') no-repeat center top;
   background-size: cover;
   min-height: 100vh;
   font-family: 'Luckiest Guy', cursive;
