--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,74 +1,74 @@
 <div class="container text-center">
-  <h1 class="simpsons-title">🏡 Bienvenido a Springfield</h1>
-  <p class="simpsons-subtitle">Descubre más sobre los personajes y las aventuras de la familia Simpson.</p>
+  <h1 class="gaming-title">🎮 Bienvenido a GameZone</h1>
+  <p class="gaming-subtitle">Descubre los juegos más épicos y populares del momento.</p>
 
-  <!-- Carrusel Mejorado -->
-  <div id="simpsonsCarousel" class="carousel slide" data-bs-ride="carousel">
+  <!-- Carrusel de Juegos -->
+  <div id="gamesCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/homer_simpson.jpg" class="d-block w-100" alt="Homer Simpson">
+        <img src="img/cyberpunk.jpg" class="d-block w-100" alt="Juego 1">
         <div class="carousel-overlay">
-          <h5>Homer Simpson</h5>
-          <p>El cabeza de familia que siempre está en busca de aventuras... o de cerveza.</p>
+          <h5>Cyberpunk 2077</h5>
+          <p>Sumérgete en un mundo futurista lleno de acción y decisiones cruciales.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/marge_simpson.jpg" class="d-block w-100" alt="Marge Simpson">
+        <img src="img/godofwar.jpeg" class="d-block w-100" alt="Juego 2">
         <div class="carousel-overlay">
-          <h5>Marge Simpson</h5>
-          <p>La madre y esposa que siempre mantiene a la familia unida.</p>
+          <h5>God of War</h5>
+          <p>Acompaña a Kratos y Atreus en una aventura épica llena de mitología.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/bart_simpson.jpg" class="d-block w-100" alt="Bart Simpson">
+        <img src="img/withcer.png" class="d-block w-100" alt="Juego 3">
         <div class="carousel-overlay">
-          <h5>Bart Simpson</h5>
-          <p>El travieso hijo que siempre está metido en problemas.</p>
+          <h5>The Witcher 3</h5>
+          <p>Explora un mundo vasto y caza monstruos como Geralt de Rivia.</p>
         </div>
       </div>
     </div>
 
     <!-- Controles del carrusel -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#simpsonsCarousel" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#gamesCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon"></span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#simpsonsCarousel" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#gamesCarousel" data-bs-slide="next">
       <span class="carousel-control-next-icon"></span>
     </button>
   </div>
 
   <div class="my-4">
-    <h2 class="simpsons-title">⭐ Elementos Destacados</h2>
+    <h2 class="gaming-title">🔥 Juegos Destacados</h2>
     <div class="row">
       <div class="col-md-4">
         <div class="card">
-          <img src="img/springfield.jpg" class="card-img-top card-img-size" alt="Springfield">
+          <img src="img/elden.jpg" class="card-img-top card-img-size" alt="Juego Destacado 1">
           <div class="card-body">
-            <h5 class="card-title">La Ciudad de Springfield</h5>
-            <p class="card-text">El hogar de los Simpsons y una ciudad llena de personajes interesantes.</p>
+            <h5 class="card-title">Elden Ring</h5>
+            <p class="card-text">Un mundo abierto lleno de desafíos y criaturas fantásticas.</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="img/krusty.png" class="card-img-top card-img-size" alt="Krusty Burger">
+          <img src="img/halo.jpg" class="card-img-top card-img-size" alt="Juego Destacado 2">
           <div class="card-body">
-            <h5 class="card-title">Krusty Burger</h5>
-            <p class="card-text">La famosa cadena de comida rápida que está llena de locuras.</p>
+            <h5 class="card-title">Halo Infinite</h5>
+            <p class="card-text">Vuelve el Jefe Maestro con más acción y combates épicos.</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card">
-          <img src="img/comisaria.jpg" class="card-img-top card-img-size" alt="Policía de Springfield">
+          <img src="img/final.jpg" class="card-img-top card-img-size" alt="Juego Destacado 3">
           <div class="card-body">
-            <h5 class="card-title">Policía de Springfield</h5>
-            <p class="card-text">El cuerpo de policía dirigido por el incompetente Chief Wiggum.</p>
+            <h5 class="card-title">Final Fantasy XVI</h5>
+            <p class="card-text">Un RPG impresionante con una historia inolvidable.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <button class="btn btn-simpsons mt-3" routerLink="/characters">👀 Ver Personajes</button>
+  <button class="btn btn-gaming mt-3" routerLink="/Juegos">🎮 Explorar Juegos</button>
 </div>
