--- a/src/app/game-list/game-list.component.html
+++ b/src/app/game-list/game-list.component.html
@@ -1,30 +1,32 @@
 <div class="container mt-4">
-    <div class="row">
-        @for (game of games; track game.id) {
-        <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-            <div class="card game-card shadow-lg" (click)="verDetalles(game.id)"  style="cursor: pointer;">
-                <img [src]="game.background_image" class="card-img-top" alt="{{ game.name }}">
-                <div class="card-body">
-                    <h5 class="card-title">{{ game.name }}</h5>
-                    <p><strong>Lanzamiento:</strong> {{ game.released }}</p>
-                    <p><strong>Metacritic:</strong> <span class="badge bg-success">{{ game.metacritic }}</span></p>
-                    <p><strong>Valoración:</strong> <span class="badge bg-warning text-dark">⭐ {{ game.rating }}/5</span></p>
-                    <hr>
-                    <h6>Plataformas:</h6>
-                    <ul class="list-unstyled platform-list">
-                        @for (platform of game.platforms; track platform.platform.id) {
-                        <li><i class="bi bi-controller"></i> {{ platform.platform.name }}</li>
-                        }
-                    </ul>
-                </div>
-            </div>
+  <!-- 🔍 Input de búsqueda -->
+  <div class="mb-3">
+    <input type="text" class="form-control" 
+      placeholder="🔍 Buscar juegos..." (input)="buscarJuego($event)">
+  </div>
+
+  <div class="row">
+    @for (game of games; track game.id) {
+      <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+        <div class="card game-card shadow-lg" (click)="verDetalles(game.id)" style="cursor: pointer;">
+          <img [src]="game.background_image" class="card-img-top" alt="{{ game.name }}">
+          <div class="card-body">
+            <h5 class="card-title">{{ game.name }}</h5>
+            <p><strong>Lanzamiento:</strong> {{ game.released }}</p>
+            <p><strong>Metacritic:</strong> <span class="badge bg-success">{{ game.metacritic }}</span></p>
+            <p><strong>Valoración:</strong> <span class="badge bg-warning text-dark">⭐ {{ game.rating }}/5</span></p>
+          </div>
         </div>
-        }
-    </div>
+      </div>
+    }
+  </div>
+
+  
 
     <div class="page-controls">
-        <button class="btn" (click)="prevPage()" [disabled]="currentPage === 1">⏮ Anterior</button>
-        <span class="fs-4 mx-3">Página {{ currentPage }}</span>
-        <button class="btn" (click)="nextPage()">Siguiente ⏭</button>
+      <button class="btn btn-primary" (click)="prevPage()" [disabled]="currentPage === 1">⏮ Anterior</button>
+      <span class="fs-4 mx-3">Página {{ currentPage }}</span>
+      <button class="btn btn-primary" (click)="nextPage()">Siguiente ⏭</button>
     </div>
+
 </div>
