--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
           <a class="nav-link text-light custom-link" routerLink="/home" routerLinkActive="active">🏠 Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light custom-link" routerLink="/Juegos" routerLinkActive="active">🎮 Juegos</a>
+          <a class="nav-link text-light custom-link" routerLink="/juegos" routerLinkActive="active">🎮 Juegos</a>
         </li>
       </ul>
     </div>
