--- a/src/app/game-list/game-list.component.css
+++ b/src/app/game-list/game-list.component.css
@@ -83,3 +83,11 @@
     color: #000;
     text-shadow: 2px 2px 10px rgba(0, 234, 255, 0.8);
   }
+
+  .platform-image {
+    width: 200px; /* Puedes cambiar el tamaño según quieras */
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+  
