--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -70,5 +70,5 @@
     </div>
   </div>
 
-  <button class="btn btn-gaming mt-3" routerLink="/Juegos">🎮 Explorar Juegos</button>
+  <button class="btn btn-gaming mt-3" routerLink="/juegos">🎮 Explorar Juegos</button>
 </div>
