--- a/src/app/game-list/game-list.component.html
+++ b/src/app/game-list/game-list.component.html
@@ -1,9 +1,6 @@
 <div class="container mt-4">
-  <!-- Input de búsqueda -->
   <div class="mb-3 d-flex align-items-center">
     <input type="text" class="form-control me-2" placeholder="🔍 Buscar juegos..." (input)="buscarJuego($event)">
-
-    <!--  Selector de Ordenación con opción deshabilitada -->
     <select class="form-select" (change)="ordenarPor($event)">
       <option value="" disabled selected>📌 Selecciona un criterio</option>
       <option value="nombre">🔠 Nombre</option>
@@ -21,7 +18,7 @@
   <div class="row">
     @for (game of games; track game.id) {
       <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
-        <div class="card game-card shadow-lg">
+        <div class="card game-card shadow-lg" (click)="verDetalles(game.id)" style="cursor: pointer;">
           <img [src]="game.background_image" class="card-img-top" alt="{{ game.name }}">
           <div class="card-body">
             <h5 class="card-title">{{ game.name }}</h5>
@@ -29,14 +26,16 @@
             <p><strong>Metacritic:</strong> <span class="badge bg-success">{{ game.metacritic }}</span></p>
             <p><strong>Valoración:</strong> <span class="badge bg-warning text-dark">⭐ {{ game.rating }}/5</span></p>
             
-            <!--  Botón de Favoritos -->
-            <button 
-              class="btn btn-sm"
-              [class.btn-danger]="favorites.has(game.id)"
-              [class.btn-outline-danger]="!favorites.has(game.id)"
-              (click)="toggleFavorite(game)">
-              {{ favorites.has(game.id) ? '❌ Quitar de Favoritos' : '⭐ Añadir a Favoritos' }}
-            </button>
+            @if (isAuthenticated === true) {
+              <button 
+                class="btn btn-sm"
+                [class.btn-danger]="favorites.has(game.id)"
+                [class.btn-outline-danger]="!favorites.has(game.id)"
+                (click)="toggleFavorite(game)">
+                {{ favorites.has(game.id) ? '❌ Quitar de Favoritos' : '⭐ Añadir a Favoritos' }}
+              </button>
+            }
+            
           </div>
         </div>
       </div>
